--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     </nav>
     <div class="box-banner text-center">
         <div class="container">
-         <iframe src="https://www.youtube.com/embed/QrjEUHzSkRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe src="https://www.youtube.com/embed/3btSheeuEOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      </div>
  </div>
  <div id="cont">
   <div class="parallx1">
-    <h2 class="titulo text-center">Lorem ipsum dolor sit amet</h2>
+    <h2 class="titulo text-center">Regístrese recibir para mayor información.</h2>
 </div><!-- fin parallx1-->
 </div>
 <div class="box-body">
@@ -43,6 +43,21 @@
     <div class="form-group">
         <label>Celular</label>
         <input type="email" class="form-control">
+    </div>
+    <div class="form-group">
+        <label>Días de contacto</label>
+        <select class="form-control">
+        	<option>Lunes a Viernes</option>
+        	<option>Fines de semana</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label>Horario llamada</label>
+        <select class="form-control">
+        	<option>09:00 am - 12:00 m</option>
+        	<option>12:00 m - 02:00 pm</option>
+        	<option>02:00 pm - 05:00 pm</option>
+        </select>
     </div>
         <!--<div class="form-group form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
