--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <title>Villa de Leiva</title>
+    <title>Wayra</title>
 </head>
 <body>
     <nav>
@@ -54,8 +54,8 @@
     <div class="form-group">
         <label>Horario llamada</label>
         <select class="form-control">
-        	<option>09:00 am - 12:00 m</option>
-        	<option>12:00 m - 02:00 pm</option>
+        	<option>09:00 am - 12:00 pm</option>
+        	<option>12:00 pm - 02:00 pm</option>
         	<option>03:00 pm - 05:00 pm</option>
         </select>
     </div>
