--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  </div>
  <div id="cont">
   <div class="parallx1">
-    <h2 class="titulo text-center">Regístrese recibir para mayor información.</h2>
+    <h2 class="titulo text-center">Regístrese para recibir mayor información.</h2>
 </div><!-- fin parallx1-->
 </div>
 <div class="box-body">
